--- a/index.html
+++ b/index.html
@@ -33,14 +33,16 @@
         <!-- 리포트가 표시될 영역 -->
         <div id="report-content" class="space-y-6">
             <div class="text-center printable-card">
-                <h1 id="report-title" class="text-3xl sm:text-4xl font-extrabold text-gray-800">리포트를 선택해주세요</h1>
+                <!-- [수정 1] 헤더/타이틀 폰트 크기 조정 -->
+                <h1 id="report-title" class="text-2xl sm:text-3xl font-extrabold text-gray-800">리포트를 선택해주세요</h1>
                 <p id="report-subtitle" class="mt-2 text-md text-gray-500"></p>
             </div>
             <div class="bg-white p-6 rounded-xl border border-gray-200 shadow-sm printable-card">
                 <div class="grid grid-cols-1 sm:grid-cols-3 gap-6 text-center">
-                    <div><p class="text-sm text-gray-500">예상 <strong class="text-gray-700">금리</strong></p><p id="metric-interest-rate" class="text-2xl font-bold text-gray-800">-</p></div>
-                    <div><p class="text-sm text-gray-500">대출 <strong class="text-gray-700">기간</strong></p><p id="metric-loan-term" class="text-2xl font-bold text-gray-800">-</p></div>
-                    <div class="col-span-1 sm:col-span-1"><p class="text-sm text-gray-500">상환 방식</p><p id="metric-repayment-method" class="text-2xl font-bold text-gray-800">-</p></div>
+                    <!-- [수정 2] 서브텍스트 스타일 보강 -->
+                    <div><p class="text-base text-gray-700">예상 <strong class="font-bold">금리</strong></p><p id="metric-interest-rate" class="text-2xl font-bold text-gray-800">-</p></div>
+                    <div><p class="text-base text-gray-700">대출 <strong class="font-bold">기간</strong></p><p id="metric-loan-term" class="text-2xl font-bold text-gray-800">-</p></div>
+                    <div class="col-span-1 sm:col-span-1"><p class="text-base text-gray-700">상환 방식</p><p id="metric-repayment-method" class="text-2xl font-bold text-gray-800">-</p></div>
                 </div>
             </div>
             <div class="bg-white p-6 rounded-xl border border-gray-200 shadow-sm space-y-4 printable-card">
@@ -49,7 +51,8 @@
             </div>
 
             <div class="printable-card">
-                <p class="text-xs text-gray-500 text-center bg-gray-100 p-4 rounded-lg">
+                <!-- [수정 4] 면책 문구 가독성 강화 -->
+                <p class="text-sm text-gray-700 text-center bg-gray-200 p-4 rounded-lg">
                     ※ 본 리포트는 예시이며, 실제 대출 조건은 금융사 정책 및 고객 신용도, 담보 평가 결과 등에 따라 달라질 수 있습니다.  
                     정확한 대출 한도 및 금리는 상담 후 확정됩니다.
                 </p>
@@ -63,7 +66,6 @@
 
     <script>
     try {
-        // [업데이트] reportData 객체 전체를 새로운 내용으로 교체
         const reportData = {
             "A": {
                 "title": "A안 - 사업자금 빠른 확보 설계",
